# KDE-Plugin-for-Wallpaper-Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Nya_folder/: plugin.h  wallpaperenginemodel.cpp
Nya_folder/WallpaperEngine/: qmldir
package/: metadata.json
package/contents/config/: main.xml
package/contents/ui/: config.qml  main.qml
src/: plugin.cpp
tests/: WeModelTest.cpp
yeah_yeah/: plugin.json  wallpaperenginemodel.h
